k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal-backend
  namespace: greyvetro
spec:
  selector:
    app: admin-portal-backend
  ports:
    - port: 8000
      targetPort: 8000
