k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-portal-frontend
  namespace: greyvetro
spec:
  selector:
    app: admin-portal-frontend
  ports:
    - port: 80
      targetPort: 80
